Avoid unnecessary boxing/instantiations
Signed-off-by: Ville Skyttä <ville.skytta@iki.fi>